--- a/branches/beta/res/values-zh-rTW/strings.xml
+++ b/branches/beta/res/values-zh-rTW/strings.xml
@@ -210,7 +210,7 @@
 		<item>true</item>
 	</string-array>
     <string-array name="keyboard_codes">
-		<item>lime</item>
+		<item>custom</item>
 		<item>phone</item>
 		<item>cj</item>
 		<item>scj</item>
