--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -209,7 +209,7 @@
 		<item>true</item>
 	</string-array>
     <string-array name="keyboard_codes">
-		<item>lime</item>
+		<item>custom</item>
 		<item>phone</item>
 		<item>cj</item>
 		<item>scj</item>
