--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -206,6 +206,7 @@
 		<item>true</item>
 		<item>true</item>
 		<item>true</item>
+		<item>true</item>
 	</string-array>
     <string-array name="keyboard_codes">
 		<item>custom</item>
