--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -255,6 +255,7 @@
     <string name="l3_message_initial_required">请初始化 LIME 资料库_</string>
     
     <string name="l3_tab_initial">初始资料库</string>
+    <string name="l3_tab_initial_error">下载失败，请确认装置已连上网路.</string>
     <string name="l3_tab_initial_message">请点选 [预载数据库] 键下载 LIME 数据库或点选 [还原数据库] 键由备份档案中还原</string>
     <string name="l3_initial_btn_load_empty_db">空白资料库</string>
     <string name="l3_initial_btn_load_preload_db">预载资料库</string>
